@@ -1,5 +1,6 @@
 2019-12-03 Jiri Gaisler <jiri@gaisler.se>
  * Define stepping 0 for Xilinx xc6slx75 FPGA
+ * src/bus/ahbjtag.c: New file. Implements bus driver for GRLIB AHBJTAG core.
 
 2019-11-25 Alexander Voropay <alec@sensi.org>
  * git log hash as version number
